lua script that reads the password from app.read
* if the password is the same, the ANI number is returned, otherwise the error

--- a/store/etc/asterisk/extensions.conf
+++ b/store/etc/asterisk/extensions.conf
@@ -1,4 +1,4 @@
-[cardplatform]
+[uplink]
 
 exten => _8X.,1,Noop(START CALL)
 exten => _8X.,n,Set(CALLERID(num)=501000)
@@ -75,7 +75,7 @@ include => trunklocal
 include => iaxtel700
 include => trunktollfree
 include => iaxprovider
-include => parkedcalls
+;include => parkedcalls
 [outbound-freenum]
 exten => _X*X!,1,Goto(outbound-freenum2,${EXTEN},1)
 exten => _XX*X!,1,Goto(outbound-freenum2,${EXTEN},1)
